# FroshImagePlaceholder

./: .gitignore  manifest.xml
AppServer/: package-lock.json  package.json  wrangler.toml
AppServer/src/: index.ts
Resources/app/storefront/: package-lock.json  package.json
Resources/app/storefront/src/: main.js  thumbhashloader.plugin.js
Resources/app/storefront/src/scss/: base.scss
Resources/views/storefront/utilities/: thumbnail.html.twig
ThumbHashLambda/: .gitignore  Cargo.toml  devenv.nix
ThumbHashLambda/src/: main.rs
