[package]
name = "thumbhash-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
fast_image_resize = "2.7.0"
image = "0.24.6"
itertools = "0.10.5"
lambda_http = { version = "0.8", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
serde = "1.0.160"
serde_urlencoded = "0.7.1"
thumbhash = "0.1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
